# AndroidNdkBuildWithCmakelist

./: .gitignore  CMakeLists.txt  README.md  libtest.cpp
